--- a/Capstone_Google_API.ipynb
+++ b/Capstone_Google_API.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "adfa1d31",
+   "id": "f8b716f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1637f426",
+   "id": "14bd1ec2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "297bc02f",
+   "id": "85ec928e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c93fc471",
+   "id": "529bea47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7fb59bc8",
+   "id": "4c602424",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cc6b2a44",
+   "id": "fe731e2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2dd0b894",
+   "id": "f92771e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1e060c9d",
+   "id": "82cab8b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3a1e3673",
+   "id": "b12ac65f",
    "metadata": {},
    "outputs": [
     {
@@ -891,13 +891,16 @@
     "        parse_html=False).add_to(map_clusters)\n",
     "\n",
     "# Mostrar el mapa con los clusters\n",
-    "map_clusters"
+    "map_clusters\n",
+    "\n",
+    "#como se observa, en Mahatan se encuentran zonas muy populares como recomendaciones para abrir una oficina o un restaurante, \n",
+    "#principalmente en la región azul marcada por los puntos al sur, que detallan que existe mayor popularidad. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2fc68e9",
+   "id": "a0c4a7d3",
    "metadata": {},
    "outputs": [],
    "source": []
